# ui-template

./: COPYING  README.md  fmacha.gnome.uitemplate.json  meson.build
data/: fmacha.gnome.uitemplate.appdata.xml.in  fmacha.gnome.uitemplate.desktop.in  fmacha.gnome.uitemplate.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  uitemplate.gresource.xml  uitemplate.in  window.py  window.ui
